<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
<TextView
    android:id="@+id/logo_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="Activity Name"
    android:textSize="30sp"
    android:transitionName="logo_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/text_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rating_title1"
        android:textSize="30sp"
        android:transitionName="logo_text" />
    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/rating_title2"
        android:textSize="30sp"
        android:transitionName="logo_text" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/submit_rating"
        android:layout_marginTop="40dp"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/rating_button" />
    </LinearLayout>

</LinearLayout>