<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.EditActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

            <ImageView
                android:id="@+id/card_media"
                style="@android:style/Animation.Toast"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:animateLayoutChanges="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:cardUseCompatPadding="true" />
                <Button
                    android:id="@+id/button_image"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_marginRight="20dp"
                    android:layout_margin="20dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    app:icon="@drawable/ic_baseline_edit_24" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <!-- Title, secondary and supporting text -->

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/editAct_title"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_title"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />
                    <TextView
                        android:id="@+id/tv_startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/editAct_startdate"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/et_startDate"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />


                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/editAct_description"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_description"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />



                    <TextView
                        android:id="@+id/tv_localtion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/editAct_location"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="bold" />


                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        >
                    <fragment
                        android:id="@+id/edit_activity_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        map:cameraZoom="10"
                        map:mapType="normal"
                        map:uiRotateGestures="false"
                        map:uiScrollGestures="false"
                        map:uiZoomControls="true" />
                        <Button
                            android:id="@+id/buton_new_location"
                            style="?attr/materialIconButtonFilledStyle"
                            android:layout_marginRight="20dp"
                            android:layout_margin="20dp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="bottom|start"
                            app:icon="@drawable/ic_baseline_edit_24" />
                    </androidx.coordinatorlayout.widget.CoordinatorLayout>



                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>



    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        android:gravity="center_horizontal"
        >

        <Button

            android:id="@+id/cancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="75dp"
            android:layout_gravity="center"
            app:backgroundTint="?attr/colorError"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/acept_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/button_acept" />

    </LinearLayout>

</LinearLayout>